feat: Update Chara☆Ste event details with low-cost operation model
- Update Experience section with detailed operation metrics (monthly 2 events, 150-300 attendees each)
- Emphasize zero advertising cost, zero labor cost operation model
- Highlight 30-minute preparation efficiency
- Add comprehensive Projects section case study on event management
- Document SNS marketing strategy from preparation phase
- Detail cost reduction and process standardization approaches

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">イベント事業 主催者・プロデューサー</h3>
                             <div class="subheading mb-3">コスプレイベント「キャラ☆ステ」</div>
-                            <p>大規模コスプレイベント「キャラ☆ステ」を設立し、10年間にわたり企画・運営を統括。年間5,000〜6,000人規模の動員を実現し、コスプレコミュニティの発展に貢献。イベント運営のノウハウとクリエイティブコミュニティのマネジメント能力を培う。</p>
+                            <p>大規模コスプレイベント「キャラ☆ステ」を設立し、10年間にわたり企画・運営を統括。月2回の定期開催で毎回150〜300人が参加、年間累計5,000〜6,000人規模の動員を実現。広告費ゼロ、人件費ゼロ、前日夜30分の準備で回せる究極のローコスト運営モデルを確立。SNSを活用した準備段階からの情報発信により、初回からスムーズなローンチを実現し、10年間の継続運営を達成。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2008年 - 2018年</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">クレーム処理業務</h3>
-                            <div class="subheading mb-3">家電量販店</div>
-                            <p>家電量販店でのクレーム処理業務を通じて、顧客対応とトラブル解決のスキルを習得。この経験が、その後の金融関係への興味につながる。</p>
+                            <h3 class="mb-0">修理サポート部門 チームリーダー</h3>
+                            <div class="subheading mb-3">大手家電量販店</div>
+                            <p>10名規模のチームを統括し、常時2名体制のシフト管理を実施。顧客対応やクレーム処理に加え、チーム運営における最重要課題として「作業引き継ぎの仕組み化」に注力。パソコン修理作業では、進行中の案件情報、トラブルシューティング履歴、顧客とのやり取り記録など、多岐にわたる情報をシフト間で正確に共有する必要がありました。この課題を解決するため、チーム内での情報共有プロセスを標準化し、引き継ぎ漏れを防ぐ独自のシステムを構築。この経験を通じて、チームマネジメント、業務プロセス改善、情報共有の重要性を学び、その後の事業運営の基盤となるスキルを習得。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2005年</span></div>
                     </div>
@@ -278,6 +278,156 @@
                             <li>ハードウェアレベルの制約を、BIOSカスタマイズという手法で解決</li>
                             <li>その後の専用マイニングマザーボード市場の先駆けとなる取り組み</li>
                             <li>技術的な課題解決が、大規模コミュニティ形成へとつながる</li>
+                        </ul>
+                    </div>
+
+                    <!-- Project 2: Team Management System -->
+                    <div class="mb-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                            <h3 class="mb-0">修理サポート部門 情報共有システムの構築</h3>
+                            <span class="text-primary">2005年</span>
+                        </div>
+                        <div class="subheading mb-3">チーム運営と引き継ぎプロセスの標準化</div>
+
+                        <h4 class="mt-4 mb-3">背景</h4>
+                        <p>大手家電量販店の修理サポート部門で、10名規模のチームをリーダーとして統括。常時2名体制で顧客対応を行うため、複雑なシフト管理が必要でした。パソコン修理という業務の特性上、1件の案件が複数日にわたることも多く、担当者が変わることで情報の断絶が発生しやすい環境でした。</p>
+
+                        <h4 class="mt-4 mb-3">課題</h4>
+                        <ul>
+                            <li><strong>シフト制による情報断絶</strong>: 常時2名体制のため、担当者が頻繁に入れ替わり、案件情報が属人化しやすい</li>
+                            <li><strong>複雑な情報の引き継ぎ</strong>:
+                                <ul>
+                                    <li>進行中の修理案件の状況（どこまで作業が進んでいるか）</li>
+                                    <li>トラブルシューティング履歴（何を試して、何が効果があったか）</li>
+                                    <li>顧客とのやり取り記録（約束した内容、期待値の調整）</li>
+                                    <li>未解決の技術的問題（保留中の調査事項）</li>
+                                </ul>
+                            </li>
+                            <li><strong>引き継ぎ漏れのリスク</strong>: 口頭やメモでの引き継ぎでは、重要な情報が抜け落ちる可能性が高い</li>
+                            <li><strong>顧客満足度への影響</strong>: 情報共有が不十分だと、顧客が同じ説明を何度も繰り返す必要があり、信頼を損なう</li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">解決アプローチ</h4>
+                        <p>チーム全体で効率的かつ確実に情報を共有するため、以下のシステムと運用ルールを構築：</p>
+                        <ul>
+                            <li><strong>情報共有プロセスの標準化</strong>:
+                                <ul>
+                                    <li>案件ごとに記録すべき項目を明確化（ステータス、作業内容、次のアクション、注意事項）</li>
+                                    <li>引き継ぎフォーマットを作成し、チーム全員が同じ形式で記録</li>
+                                    <li>緊急度や優先度を可視化する仕組みの導入</li>
+                                </ul>
+                            </li>
+                            <li><strong>集約型の情報管理</strong>:
+                                <ul>
+                                    <li>すべての案件情報を一箇所に集約し、誰でもアクセス可能に</li>
+                                    <li>最新情報が常に参照できるシステムの構築</li>
+                                    <li>検索性を高め、過去の類似案件も参照可能に</li>
+                                </ul>
+                            </li>
+                            <li><strong>チーム内ルールの確立</strong>:
+                                <ul>
+                                    <li>シフト交代時の必須チェック項目を定義</li>
+                                    <li>重要な更新があった場合の連絡フローを整備</li>
+                                    <li>定期的なチームミーティングで情報共有の質を確認</li>
+                                </ul>
+                            </li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">成果</h4>
+                        <ul>
+                            <li><strong>引き継ぎ漏れの大幅削減</strong>: 標準化されたプロセスにより、情報の抜け漏れがほぼゼロに</li>
+                            <li><strong>顧客満足度の向上</strong>: 担当者が変わっても一貫した対応が可能になり、顧客からの信頼が向上</li>
+                            <li><strong>チーム全体の効率化</strong>: 情報を探す時間が削減され、本質的な業務に集中できる環境を実現</li>
+                            <li><strong>ナレッジの蓄積</strong>: 過去の事例が検索可能になり、トラブルシューティングの効率が向上</li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">その後への影響</h4>
+                        <p>この経験で得た「情報共有の重要性」「業務プロセスの標準化」「チームマネジメント」のスキルは、その後の事業運営の基盤となりました。特に、複数のプロジェクトを同時進行させる際や、コミュニティ運営において、この時に構築した情報共有の考え方が大きく活きています。</p>
+
+                        <h4 class="mt-4 mb-3">学び</h4>
+                        <ul>
+                            <li>属人化を防ぐためには、情報の「可視化」と「標準化」が不可欠</li>
+                            <li>システムを作るだけでなく、チーム全員が使いこなせるルールと文化の醸成が重要</li>
+                            <li>小さな改善の積み重ねが、大きな業務効率化につながる</li>
+                            <li>顧客満足度は、技術力だけでなく、チーム全体の情報共有力に左右される</li>
+                        </ul>
+                    </div>
+
+                    <!-- Project 3: Chara☆Ste Event Management -->
+                    <div class="mb-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                            <h3 class="mb-0">キャラ☆ステ 究極のローコスト運営モデル</h3>
+                            <span class="text-primary">2008年 - 2018年</span>
+                        </div>
+                        <div class="subheading mb-3">広告費ゼロ・人件費ゼロで10年継続したイベント運営の仕組み</div>
+
+                        <h4 class="mt-4 mb-3">背景</h4>
+                        <p>コスプレイベント「キャラ☆ステ」を立ち上げ、月2回の定期開催で毎回150〜300人が参加する大規模イベントへと成長させました。しかし、イベント運営には通常、広告費や人件費などの固定費が大きな負担となります。10年間という長期にわたり継続するためには、持続可能な運営モデルの構築が不可欠でした。</p>
+
+                        <h4 class="mt-4 mb-3">課題</h4>
+                        <ul>
+                            <li><strong>固定費の削減</strong>: 広告費や人件費などの固定費をいかに抑えるか</li>
+                            <li><strong>準備時間の最小化</strong>: 月2回開催のため、準備に多大な時間をかけられない</li>
+                            <li><strong>継続可能性</strong>: 労力をかけすぎると運営者が疲弊し、長期継続が困難になる</li>
+                            <li><strong>集客の安定化</strong>: 広告費なしで毎回安定した集客を実現する必要がある</li>
+                            <li><strong>初回ローンチのリスク</strong>: 新規イベントは認知度がなく、初回の集客が最も難しい</li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">解決アプローチ</h4>
+                        <p>徹底的なローコスト化と効率化を実現するため、以下の戦略を実行：</p>
+
+                        <h5 class="mt-3 mb-2">1. 広告費ゼロのマーケティング戦略</h5>
+                        <ul>
+                            <li><strong>SNSの戦略的活用</strong>: X（旧Twitter）を中心に、準備段階から情報を発信</li>
+                            <li><strong>準備過程の可視化</strong>: イベントの準備状況を定期的に投稿し、期待感を醸成</li>
+                            <li><strong>コミュニティの育成</strong>: 参加者自身がSNSで拡散してくれる仕組みづくり</li>
+                            <li><strong>口コミの最大化</strong>: 満足度の高いイベント体験を提供し、自然な口コミを促進</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">2. 人件費ゼロの運営体制</h5>
+                        <ul>
+                            <li><strong>セルフサービス化</strong>: 参加者の自主性を尊重し、過度な管理・誘導を排除</li>
+                            <li><strong>シンプルな運営ルール</strong>: 複雑な運営オペレーションを排除し、最小限のスタッフで対応可能に</li>
+                            <li><strong>コミュニティの自律性</strong>: 参加者同士が自然に交流し、イベントが回る仕組みを構築</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">3. 前日夜30分準備の簡素化</h5>
+                        <ul>
+                            <li><strong>標準化されたプロセス</strong>: 毎回同じ手順で準備できるようマニュアル化</li>
+                            <li><strong>最小限の準備項目</strong>: 本当に必要なものだけに絞り込み</li>
+                            <li><strong>会場との連携</strong>: 会場側との信頼関係を構築し、スムーズな準備を実現</li>
+                            <li><strong>デジタル化の活用</strong>: 紙の資料を最小化し、デジタルツールで効率化</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">4. 初回ローンチの成功戦略</h5>
+                        <ul>
+                            <li><strong>準備段階からの情報発信</strong>: 「イベントをやるよ」という告知を早期から実施</li>
+                            <li><strong>準備の過程を公開</strong>: 会場選定、企画立案、準備状況など、すべてのプロセスをSNSで共有</li>
+                            <li><strong>期待感の醸成</strong>: 「これから始まる」というワクワク感を定期的に発信</li>
+                            <li><strong>コミュニティの巻き込み</strong>: 準備段階から参加者を巻き込み、一緒に作り上げる感覚を演出</li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">成果</h4>
+                        <ul>
+                            <li><strong>10年間の継続運営</strong>: 広告費・人件費ゼロのモデルで、10年間にわたり月2回の定期開催を実現</li>
+                            <li><strong>安定した集客</strong>: 毎回150〜300人の参加者を安定的に集客</li>
+                            <li><strong>年間5,000〜6,000人動員</strong>: 年間累計で大規模な動員数を達成</li>
+                            <li><strong>初回からのスムーズなローンチ</strong>: SNS戦略により、初回イベントから成功を収める</li>
+                            <li><strong>運営者の負担最小化</strong>: 前日夜30分の準備で回せるため、長期継続が可能に</li>
+                            <li><strong>コミュニティの自律化</strong>: 参加者が主体的に楽しむ文化が定着</li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">その後への影響</h4>
+                        <p>この経験で得た「ローコスト運営」「SNSマーケティング」「コミュニティマネジメント」「プロセスの標準化」のノウハウは、その後の様々な事業に活かされています。特に、マイニングコミュニティの運営（全国300名規模）や、フォトスタジオの集客においても、同様の考え方が大きく貢献しました。</p>
+
+                        <h4 class="mt-4 mb-3">学び</h4>
+                        <ul>
+                            <li>広告費をかけずとも、SNSでの情報発信と口コミで十分な集客が可能</li>
+                            <li>準備段階からの情報発信が、初回ローンチの成功と期待感の醸成につながる</li>
+                            <li>運営の簡素化・標準化が、長期継続の鍵となる</li>
+                            <li>参加者の自律性を尊重することで、人件費をかけずにイベントが回る</li>
+                            <li>「過度に頑張らない」ことが、持続可能な運営モデルを生む</li>
+                            <li>固定費を徹底的に削減することで、収益性の高いビジネスモデルが構築できる</li>
                         </ul>
                     </div>
 
