feat: Add comprehensive Generative AI experience and projects
Experience Section:
- Add '生成AI 実践活用・コミュニティ運営' (2023 - present)
- Multiple LLM services: ChatGPT, Claude, Gemini, Manus, Perplexity, Genspark, Skywork
- Multi-modal AI experimentation: ImageFX, Runway, KlingAI, Suno
- note.com article generation automation
- Co-host and lecturer of Generative AI study group (1+ years)
- Organizer of Generative AI study group @Azabu-juban
- Update video production: 2022年頃 → 2022年 - 現在
- Update repair support: 2005年 → 2005年 - 2009年
- Reorder all experience items chronologically (newest first)

Projects Section:
- Add comprehensive case study: '生成AI 多角的実験とコンテンツ制作フロー構築'
  - Background: Early adopter since ChatGPT 3.5
  - LLM comparison and practical use
  - Image/video/music AI experimentation
  - Determined writing AI as most stable
  - note.com automation workflow
  - Community education activities

Skills Section:
- Add 7 LLM services proficiency
- Add multi-modal AI experimentation (image, video, music)
- Add AI content creation workflow design
- Add study group lecturer/facilitator

Awards Section:
- ChatGPT 3.5 era early adopter
- Generative AI study group co-host/lecturer (1+ years)
- Generative AI study group @Azabu-juban organizer

--- a/index.html
+++ b/index.html
@@ -367,6 +367,90 @@
                         </ul>
                     </div>
 
+                    <!-- Project 5: Generative AI Multi-modal Experimentation -->
+                    <div class="mb-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                            <h3 class="mb-0">生成AI 多角的実験とコンテンツ制作フロー構築</h3>
+                            <span class="text-primary">2023年頃 - 現在</span>
+                        </div>
+                        <div class="subheading mb-3">ChatGPT 3.5時代からのアーリーアダプターとしてのマルチモーダルAI実験</div>
+
+                        <h4 class="mt-4 mb-3">背景</h4>
+                        <p>ChatGPT 3.5がリリースされた黎明期から、生成AIの可能性に着目。「新しいテクノロジーは実際に使ってみなければわからない」という信念のもと、様々なAIサービスを契約し、実践的に活用を開始しました。画像、動画、音楽、ライティングなど、マルチモーダルAIの各分野を幅広く実験し、最適な活用方法を模索してきました。</p>
+
+                        <h4 class="mt-4 mb-3">実践内容</h4>
+
+                        <h5 class="mt-3 mb-2">1. LLM（大規模言語モデル）の使い分け実験</h5>
+                        <ul>
+                            <li><strong>契約・活用サービス</strong>: ChatGPT、Claude、Gemini、Manus、Perplexity、Genspark、Skywork</li>
+                            <li><strong>各サービスの特性把握</strong>: それぞれの強み・弱みを実践的に比較</li>
+                            <li><strong>用途別の使い分け</strong>: タスクに応じて最適なLLMを選択</li>
+                            <li><strong>AI検索エンジン（Perplexity）</strong>での情報収集効率化</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">2. 画像生成AIの実験</h5>
+                        <ul>
+                            <li><strong>実験サービス</strong>: ImageFXほか、複数の画像生成AIツールを試用</li>
+                            <li><strong>用途別検証</strong>: イラスト、写真、デザインなど、各用途での適性を評価</li>
+                            <li><strong>課題の発見</strong>: 安定性、クオリティ、コントロール性の面で課題を確認</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">3. 動画生成AIの実験</h5>
+                        <ul>
+                            <li><strong>実験サービス</strong>: Runway、KlingAIほか、複数の動画生成AIツールを検証</li>
+                            <li><strong>技術的検証</strong>: 生成速度、品質、操作性を実践的に比較</li>
+                            <li><strong>現状の把握</strong>: まだ実用レベルには達していないと判断</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">4. 音楽生成AI（Suno）の実用化</h5>
+                        <ul>
+                            <li><strong>YouTube動画のBGM制作</strong>: 実際の動画コンテンツに活用</li>
+                            <li><strong>継続的な利用</strong>: 複数の動画でBGMとして採用</li>
+                            <li><strong>実用性の確認</strong>: 音楽生成AIは実用レベルに達していると評価</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">5. ライティングAIの選択と実用化</h5>
+                        <ul>
+                            <li><strong>最終的な判断</strong>: 画像・動画・音楽・ライティングの各分野を実験した結果、**ライティングが最も安定・効果的**と判断</li>
+                            <li><strong>note.com記事生成フロー構築</strong>:
+                                <ul>
+                                    <li>記事のアイデア出しから執筆まで、AIを活用した自動化フローを設計</li>
+                                    <li>複数のLLMを組み合わせて、質の高いコンテンツ生成を実現</li>
+                                    <li>継続的な記事制作を効率化</li>
+                                </ul>
+                            </li>
+                            <li><strong>運用の継続</strong>: 実際にnote.comで記事を公開し、フローの改善を継続</li>
+                        </ul>
+
+                        <h5 class="mt-3 mb-2">6. 教育・コミュニティ活動</h5>
+                        <ul>
+                            <li><strong>生成AI勉強会 共同主催・講師</strong>: 1年以上継続し、知識と経験を共有</li>
+                            <li><strong>生成AI勉強会@麻布十番 主催</strong>: 独自に立ち上げ、第3回開催に向けて運営</li>
+                            <li><strong>コミュニティ形成</strong>: 生成AIに関心を持つ人々の交流と学習の場を提供</li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">成果と学び</h4>
+                        <ul>
+                            <li><strong>複数AIサービスの実践的知見</strong>: 7つのLLMサービスを使い分けるノウハウを獲得</li>
+                            <li><strong>マルチモーダルAIの現状把握</strong>: 各分野の技術レベルと実用性を体系的に理解</li>
+                            <li><strong>最適解の発見</strong>: ライティングが現時点で最も安定・効果的と判断</li>
+                            <li><strong>note記事制作の効率化</strong>: 自動化フローにより継続的なコンテンツ制作を実現</li>
+                            <li><strong>YouTube BGM制作の実用化</strong>: Sunoを活用し、動画制作を効率化</li>
+                            <li><strong>教育活動の展開</strong>: 勉強会を通じて知識を共有し、コミュニティを形成</li>
+                        </ul>
+
+                        <h4 class="mt-4 mb-3">アーリーアダプターとしての姿勢</h4>
+                        <p>ChatGPT 3.5の黎明期から生成AIに注目し、「まずは試してみる」という姿勢で様々なサービスを契約・実験してきました。画像・動画・音楽・ライティングという4つの大きな分野でAIツールを網羅的に試し、それぞれの現状と可能性を実体験として把握。「どれが最も実用的か」を自ら検証し、ライティングという最適解を見出しました。この過程で得た知見を、勉強会というコミュニティ活動を通じて積極的に共有し、生成AI活用の普及に貢献しています。</p>
+
+                        <h4 class="mt-4 mb-3">今後の展望</h4>
+                        <ul>
+                            <li>生成AI技術の進化に合わせて、継続的に新しいツール・サービスを試用</li>
+                            <li>note記事生成フローのさらなる改善と効率化</li>
+                            <li>動画生成AIが実用レベルに達した際の、YouTube制作への応用</li>
+                            <li>勉強会活動の拡大と、より多くの人への知識共有</li>
+                        </ul>
+                    </div>
+
                     <p class="text-muted"><em>※ 今後、その他のプロジェクトのケーススタディも順次追加予定です。</em></p>
                 </div>
             </section>
@@ -377,19 +461,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">代表取締役</h3>
-                            <div class="subheading mb-3">有限会社SSS</div>
-                            <p>イベント運営企画、ITサポート、パソコン修理、国際金融商品紹介、海外銀行口座開設サポート、海外法人設立サポートなど、多岐にわたる事業を展開。2013年からは東京での活動も開始し、コスプレイベントの主催・運営、Airbnbを活用した民泊事業、iPhone修理サービスなど、常に新しい分野にチャレンジしています。</p>
+                            <h3 class="mb-0">生成AI 実践活用・コミュニティ運営</h3>
+                            <div class="subheading mb-3">複数AIサービス活用 | 生成AI勉強会主催・講師</div>
+                            <p>ChatGPT 3.5時代から生成AIのアーリーアダプターとして、複数のLLMサービス（ChatGPT、Claude、Gemini、Manus、Perplexity、Genspark、Skywork）を契約・実践活用。AI検索（Perplexity）、画像生成AI（ImageFXほか）、動画生成AI（Runway、KlingAIほか）、音楽生成AI（Suno）など、マルチモーダルAIを幅広く実験。ライティングが最も安定・効果的と判断し、note.com記事生成の自動化フロー構築・運用を実現。生成AI勉強会を共同主催し講師を1年以上継続、さらに生成AI勉強会@麻布十番を独自に主催し、コミュニティを通じた知識共有を推進。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2005年2月 - 現在</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2023年頃 - 現在</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">海外金融事業</h3>
-                            <div class="subheading mb-3">有限会社SSS | 香港拠点法人とのアライアンス</div>
-                            <p>個人向けに海外オフショア積立商材の提供、HSBC銀行口座開設ツアーの企画・実施など、国際金融サービスを本格的に展開。香港に拠点を持つ法人とアライアンスを組み、海外法人設立や海外口座開設のサポートを通じて、グローバルな視点でクライアントの資産運用と事業展開をサポート。</p>
+                            <h3 class="mb-0">映像制作・編集 クリエイター</h3>
+                            <div class="subheading mb-3">YouTubeチャンネル向けコンテンツ制作</div>
+                            <p>YouTubeチャンネル向けの動画撮影、写真撮影、動画編集を専門的に提供。カメラ歴15年以上の経験を活かし、クライアントのビジョンを映像コンテンツとして具現化。撮影から編集まで一貫したクリエイティブワークフローで、質の高いコンテンツ制作をサポート。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2011年 - 現在</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022年 - 現在</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -401,19 +485,19 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">映像制作・編集 クリエイター</h3>
-                            <div class="subheading mb-3">YouTubeチャンネル向けコンテンツ制作</div>
-                            <p>YouTubeチャンネル向けの動画撮影、写真撮影、動画編集を専門的に提供。カメラ歴15年以上の経験を活かし、クライアントのビジョンを映像コンテンツとして具現化。撮影から編集まで一貫したクリエイティブワークフローで、質の高いコンテンツ制作をサポート。</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2022年頃</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
                             <h3 class="mb-0">フォトスタジオ運営 オーナー・フォトグラファー</h3>
                             <div class="subheading mb-3">フォトスタジオ-Rosetta-（金沢）</div>
                             <p>コスプレイヤー向け専門フォトスタジオ「Rosetta」を金沢に開設。内装から照明、背景セットまで全て自らの手で設計・制作し、クリエイティブな撮影環境を構築。ニッチ市場への先駆的なアプローチで、コスプレ撮影のプロフェッショナルスタジオとして確立。DIY精神と撮影技術を融合させた独自のスタジオ運営を実現。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2013年 - </span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">海外金融事業</h3>
+                            <div class="subheading mb-3">有限会社SSS | 香港拠点法人とのアライアンス</div>
+                            <p>個人向けに海外オフショア積立商材の提供、HSBC銀行口座開設ツアーの企画・実施など、国際金融サービスを本格的に展開。香港に拠点を持つ法人とアライアンスを組み、海外法人設立や海外口座開設のサポートを通じて、グローバルな視点でクライアントの資産運用と事業展開をサポート。</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2011年 - 現在</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -423,13 +507,21 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2008年 - 2018年</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">代表取締役</h3>
+                            <div class="subheading mb-3">有限会社SSS</div>
+                            <p>イベント運営企画、ITサポート、パソコン修理、国際金融商品紹介、海外銀行口座開設サポート、海外法人設立サポートなど、多岐にわたる事業を展開。2013年からは東京での活動も開始し、コスプレイベントの主催・運営、Airbnbを活用した民泊事業、iPhone修理サービスなど、常に新しい分野にチャレンジしています。</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2005年2月 - 現在</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">修理サポート部門 チームリーダー</h3>
                             <div class="subheading mb-3">大手家電量販店</div>
                             <p>10名規模のチームを統括し、常時2名体制のシフト管理を実施。顧客対応やクレーム処理に加え、チーム運営における最重要課題として「作業引き継ぎの仕組み化」に注力。パソコン修理作業では、進行中の案件情報、トラブルシューティング履歴、顧客とのやり取り記録など、多岐にわたる情報をシフト間で正確に共有する必要がありました。この課題を解決するため、チーム内での情報共有プロセスを標準化し、引き継ぎ漏れを防ぐ独自のシステムを構築。この経験を通じて、チームマネジメント、業務プロセス改善、情報共有の重要性を学び、その後の事業運営の基盤となるスキルを習得。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2005年</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2005年 - 2009年</span></div>
                     </div>
                 </div>
             </section>
@@ -476,6 +568,22 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             暗号通貨・ブロックチェーン
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            生成AI活用（ChatGPT、Claude、Gemini、Manus、Perplexity、Genspark、Skywork）
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            AI画像生成（ImageFXほか）・動画生成（Runway、KlingAIほか）・音楽生成（Suno）実験
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            AIコンテンツ制作フロー設計・運用（note.com記事生成自動化）
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            生成AI勉強会 講師・ファシリテーター
                         </li>
                     </ul>
                 </div>
@@ -526,6 +634,18 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Uber Eats配達パートナー 6年8ヶ月継続（2019年5月 - 現在） - 東京黎明期から参加、沖縄・金沢新規エリア開拓
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            ChatGPT 3.5時代からの生成AIアーリーアダプター（2023年頃 - ）- 複数LLM・マルチモーダルAI実験
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            生成AI勉強会 共同主催・講師 1年以上継続 - 知識共有とコミュニティ形成
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            生成AI勉強会@麻布十番 主催 - 独自コミュニティ立ち上げ・運営
                         </li>
                     </ul>
                 </div>
