--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
                         <h5 class="mt-3 mb-2">1. LLM（大規模言語モデル）の使い分け実験</h5>
                         <ul>
                             <li><strong>契約・活用サービス</strong>: ChatGPT、Claude、Gemini、Manus、Perplexity、Genspark、Skywork</li>
+                            <li><strong>CLIツール</strong>: Claude Code、Codex CLI、Gemini CLI</li>
                             <li><strong>各サービスの特性把握</strong>: それぞれの強み・弱みを実践的に比較</li>
                             <li><strong>用途別の使い分け</strong>: タスクに応じて最適なLLMを選択</li>
                             <li><strong>AI検索エンジン（Perplexity）</strong>での情報収集効率化</li>
@@ -412,14 +413,14 @@
                         <h5 class="mt-3 mb-2">5. ライティングAIの選択と実用化</h5>
                         <ul>
                             <li><strong>最終的な判断</strong>: 画像・動画・音楽・ライティングの各分野を実験した結果、**ライティングが最も安定・効果的**と判断</li>
-                            <li><strong>note.com記事生成フロー構築</strong>:
+                            <li><strong><a href="https://note.com/micnote" target="_blank" class="text-decoration-underline">note.com</a>記事生成フロー構築</strong>:
                                 <ul>
                                     <li>記事のアイデア出しから執筆まで、AIを活用した自動化フローを設計</li>
                                     <li>複数のLLMを組み合わせて、質の高いコンテンツ生成を実現</li>
                                     <li>継続的な記事制作を効率化</li>
                                 </ul>
                             </li>
-                            <li><strong>運用の継続</strong>: 実際にnote.comで記事を公開し、フローの改善を継続</li>
+                            <li><strong>運用の継続</strong>: 実際に<a href="https://note.com/micnote" target="_blank" class="text-decoration-underline">note.com</a>で記事を公開し、フローの改善を継続</li>
                         </ul>
 
                         <h5 class="mt-3 mb-2">6. 教育・コミュニティ活動</h5>
@@ -463,7 +464,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">生成AI 実践活用・コミュニティ運営</h3>
                             <div class="subheading mb-3">複数AIサービス活用 | 生成AI勉強会主催・講師</div>
-                            <p>ChatGPT 3.5時代から生成AIのアーリーアダプターとして、複数のLLMサービス（ChatGPT、Claude、Gemini、Manus、Perplexity、Genspark、Skywork）を契約・実践活用。AI検索（Perplexity）、画像生成AI（ImageFXほか）、動画生成AI（Runway、KlingAIほか）、音楽生成AI（Suno）など、マルチモーダルAIを幅広く実験。ライティングが最も安定・効果的と判断し、note.com記事生成の自動化フロー構築・運用を実現。生成AI勉強会を共同主催し講師を1年以上継続、さらに生成AI勉強会@麻布十番を独自に主催し、コミュニティを通じた知識共有を推進。</p>
+                            <p>ChatGPT 3.5時代から生成AIのアーリーアダプターとして、複数のLLMサービス（ChatGPT、Claude、Gemini、Manus、Perplexity、Genspark、Skywork）およびCLIツール（Claude Code、Codex CLI、Gemini CLI）を契約・実践活用。AI検索（Perplexity）、画像生成AI（ImageFXほか）、動画生成AI（Runway、KlingAIほか）、音楽生成AI（Suno）など、マルチモーダルAIを幅広く実験。ライティングが最も安定・効果的と判断し、<a href="https://note.com/micnote" target="_blank" class="text-decoration-underline">note.com</a>記事生成の自動化フロー構築・運用を実現。生成AI勉強会を共同主催し講師を1年以上継続、さらに生成AI勉強会@麻布十番を独自に主催し、コミュニティを通じた知識共有を推進。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2023年頃 - 現在</span></div>
                     </div>
@@ -572,6 +573,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             生成AI活用（ChatGPT、Claude、Gemini、Manus、Perplexity、Genspark、Skywork）
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            AI CLIツール（Claude Code、Codex CLI、Gemini CLI）
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
